# crewai-examples

./: README.md  pyproject.toml
crewai_examples/: 01_market_reseach_gas.py  02_generic_reseach.py  02_marke_research_gas_ollama.py
