[tool.poetry]
name = "crewai-examples"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy.partner@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = "^0.19.0"
rich = "^13.7.1"
langchain = "^0.1.11"
duckduckgo-search = "^5.0"
langchain-community = "^0.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
